# baygon

./: .editorconfig  .flake8  .gitignore  404.html  AUTHORS  BUILD_DEPLOY_FIX.md  CHANGES.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  TODO.md  baygon.yml  diagram.drawio  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-schema.py  tox.ini
.github/workflows/: ci.yml  release.yml
assets/: 404.html-BACR9Dta.js  404.html-BbV1jHFU.js  404.html-BovaHxoY.js  404.html-BuraEDyo.js  404.html-BxQ6Atf_.js  404.html-CrR5wu3b.js  404.html-DyevXxCf.js  404.html-OFMoQ5S9.js  404.html-UV-xN2rK.js  404.html-_aiqGd5h.js  404.html.10828f85.js  404.html.7d2c74b1.js  404.html.84681301.js  404.html.bbb9c4f1.js  advanced.html-3gv6PyDk.js  advanced.html-9koN7CWl.js  advanced.html-A8D6P6RG.js  advanced.html-BmvBS32Y.js  advanced.html-C6NU3uzd.js  advanced.html-CUGn6YQi.js  advanced.html-CwamL-ab.js  advanced.html-D9rlNqEe.js  advanced.html-YCVpVbk1.js  advanced.html-tnwaDAcw.js  advanced.html.2d438f25.js  advanced.html.2edbf4ee.js  advanced.html.830d466e.js  advanced.html.93df512d.js  advanced.html.9878b719.js  advanced.html.c115cc67.js  app-97Q92cTr.js  app-B_wgLvVB.js  app-C6qaPqih.js  app-C9EIBFXu.js  app-Co_6xWNu.js  app-D-rYrh4u.js  app-DUUgul16.js  app-DZORGJ_d.js  app-Dg7hlZB4.js  app-Dl9842U3.js  (+105 more)
assets/css/: 0.styles.107a8774.css  0.styles.1c7c1132.css  0.styles.50f53c78.css  0.styles.6f6597c9.css  0.styles.7a29cf26.css  0.styles.8a304d46.css
assets/js/: 10.105a6802.js  10.3acba2b6.js  10.5660322c.js  10.ee81e179.js  10.f8c9897d.js  2.b3909ca3.js  2.b50a409f.js  2.d239076d.js  3.00800b77.js  3.8db928bb.js  3.c8ea3d09.js  3.d4bf94ce.js  3.d89b5ff8.js  4.a4ba288f.js  4.ae3d94a8.js  5.03df0e41.js  5.3c8e528e.js  8.0c92243d.js  8.489b071c.js  8.492ab6e5.js  8.561f3da4.js  8.6598a3e0.js  8.e3e1dc77.js  8.e68f9c1e.js  9.5a25776b.js  9.5c2c1508.js  9.873c6ffd.js  9.a077098b.js  9.d583fba3.js  9.d70f1d3a.js  9.e078452d.js  9.f1fc66cb.js  9.fa92ff1b.js  app.01d2937d.js  app.056c1709.js  app.06a20a4f.js  app.0a004aa1.js  app.0b43e711.js  app.175fd5fb.js  app.1e6ec4d6.js  (+45 more)
baygon/: __init__.py  __main__.py  config.py  description.py  error.py  eval.py  executable.py  filter.py  filters.py  helpers.py  id.py  kernel.py  matchers.py  schema.py  score.py  str.py  suite.py  test.py  validation.py
baygon/config/: __init__.py  loader.py
baygon/core/: __init__.py  models.py
baygon/presentation/: __init__.py  rich.py  text.py
baygon/runtime/: __init__.py  runner.py
baygon/tests/: test_config.py  test_description.py  test_schema.py  test_validation.py
baygon/tests/test_click/: __init__.py  add.py  fail.yml  ignorespaces.yml  main.py  main2.py  success.yml
baygon/tests/test_executable/: __init__.py  args.py  dummy.py
baygon/tests/test_full/: __init__.py  main.py  tests.yml
demo/: Makefile  README.md  tests.yml
docs/: README.md  about.md  changelog.md  contributing.md  getting-started.md  index.md  package-lock.json  package.json  score.md  scripting.md  syntax.md  versions.json
docs/api/: index.md
docs/docs/: README.md
docs/docs/.vuepress/: config.js  config.ts
docs/docs/.vuepress/styles/: index.scss  palette.styl
docs/docs/guide/: README.md  Syntax.md  advanced.md  syntax.md
docs/styles/: home.css
guide/: Advanced.html  Syntax.html  advanced.html  contributing.html  index.html  score.html  scripting.html  syntax.html
heig-test/: __init__.py  __main__.py  messages.py  test.py  validation.py
heigtest/: __main__.py  executable.py  test.py  validation.py
tests/: Makefile  eval.yml  main.c  test_config.py  test_config_loader.py  test_config_loader_edges.py  test_core_models.py  test_description.py  test_eval.py  test_filters.py  test_id.py  test_kernel.py  test_main_module.py  test_matchers.py  test_presentation_rich.py  test_presentation_text.py  test_re.py  test_runtime_runner.py  test_schema.py  test_score.py  test_suite_services.py  test_version_info.py  tests.yml
tests/cli/: add.exe.py  fail.yml  full.yml  inverse.yml  main.exe.py  sub.exe.py  test_cli.py  test_cli_errors.py
tests/click/: add.exe.py  fail.yml  foo.yaml  full.yml  ignorespaces.yml  main.py  points.yml  sub.exe.py  success.yml  test_click.py
tests/executable/: args.exe.py  dummy.exe.py  invalid_bytes.exe.py  test_executable.py
tests/full/: __init__.py  tests.yml
