[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "baygon"
version = "0.6.1"
description = "Functional tests for teaching activities"
authors = ["Yves Chevallier <yves.chevallier@heig-vd.ch>"]
license = "MIT"
readme = "README.md"
keywords = ["testing", "functional-testing"]
homepage = "https://github.com/heig-tin-info/baygon"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Education :: Testing",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
]
exclude = [
    ".editorconfig",
    "baygon/version.py",
    ".gitignore",
    ".eggs",
    ".env",
    ".tox",
    ".vscode",
    ".vscode/settings.json",
    "*.pyc",
    "*~",
    ".DS_Store",
    "__pycache__",
    "*.pyo",
    "node_modules",
]

[tool.poetry.urls]
"Documentation" = "https://heig-tin-info.github.io/baygon/"
"Source" = "https://github.com/heig-tin-info/baygon"
"Tracker" = "https://github.com/heig-tin-info/baygon/issues"

[tool.poetry.dependencies]
python = ">=3.9"
pydantic = "^2.9"
PyYAML = "^6.0"
tinykernel = "^0.0.2"
rich = "^13.9.2"
termynal = "^0.13.1"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"
black = "^24.10.0"
tox = "^4.21.2"
mkdocs = "^1.6.1"
mkdocs-material = {extras = ["imaging"], version = "^9.6.21"}
mkdocstrings = {extras = ["python"], version = "^0.26"}

[tool.check-manifest]
ignore = ["node_modules/*"]

[tool.poetry.scripts]
baygon = "baygon.__main__:run"

[tool.poetry.extras]
test = ["ruff", "black", "tox"]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = "baygon tests"
python_files = "test_*.py"
python_classes = "Test*"
norecursedirs = [".git", "_build"]
addopts = '''
    --doctest-modules
    --ignore-glob='*.exe.py'
    --cov=baygon --cov-report
    term --cov-report
    xml --cov-fail-under=80 -vvv
'''
