[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "baygon"
version = "0.6.0"
description = "Functional tests for teaching activities"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Yves Chevallier", email = "yves.chevallier@heig-vd.ch"},
]
keywords = [
  "testing",
  "functional-testing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Topic :: Education :: Testing",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydantic>=2.12.5,<3",
  "PyYAML>=6.0.3,<7",
  "tinykernel>=0.0.2,<0.0.3",
  "rich>=14.3.3,<15",
  "termynal>=0.13.1,<0.14",
  "click>=8.3.1,<9",
  "typer>=0.24.1,<0.25",
  "eval-type-backport>=0.3.1,<0.4",
]

[project.urls]
Documentation = "https://heig-tin-info.github.io/baygon/"
Source = "https://github.com/heig-tin-info/baygon"
Tracker = "https://github.com/heig-tin-info/baygon/issues"
Homepage = "https://github.com/heig-tin-info/baygon"

[project.scripts]
baygon = "baygon.__main__:run"

[project.optional-dependencies]
test = [
  "pytest>=9.0.2,<10",
  "pytest-cov>=7.0.0,<8",
]
lint = [
  "ruff>=0.15.4,<0.16",
  "black>=26.1.0,<27",
]
docs = [
  "mkdocs>=1.6.1,<2",
  "mkdocs-material[imaging]>=9.7.3,<10",
  "mkdocstrings[python]>=1.0.3,<2",
]
dev = [
  "nox>=2026.2.9,<2027",
  "pytest>=9.0.2,<10",
  "pytest-cov>=7.0.0,<8",
  "ruff>=0.15.4,<0.16",
  "black>=26.1.0,<27",
  "mkdocs>=1.6.1,<2",
  "mkdocs-material[imaging]>=9.7.3,<10",
  "mkdocstrings[python]>=1.0.3,<2",
]

[dependency-groups]
test = [
  "pytest>=9.0.2,<10",
  "pytest-cov>=7.0.0,<8",
]
lint = [
  "ruff>=0.15.4,<0.16",
  "black>=26.1.0,<27",
]
docs = [
  "mkdocs>=1.6.1,<2",
  "mkdocs-material[imaging]>=9.7.3,<10",
  "mkdocstrings[python]>=1.0.3,<2",
]
dev = [
  "nox>=2026.2.9,<2027",
  "pytest>=9.0.2,<10",
  "pytest-cov>=7.0.0,<8",
  "ruff>=0.15.4,<0.16",
  "black>=26.1.0,<27",
  "mkdocs>=1.6.1,<2",
  "mkdocs-material[imaging]>=9.7.3,<10",
  "mkdocstrings[python]>=1.0.3,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["baygon"]

[tool.hatch.build.targets.sdist]
include = [
  "AUTHORS",
  "CHANGES.md",
  "LICENSE.txt",
  "README.md",
  "TODO.md",
  "baygon",
  "baygon.yml",
  "demo",
  "docs",
  "mkdocs.yml",
  "tests",
  "noxfile.py",
]

[tool.check-manifest]
ignore = ["node_modules/*"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = "baygon tests"
python_files = "test_*.py"
python_classes = "Test*"
norecursedirs = [".git", "_build"]
addopts = '''
    --doctest-modules
    --ignore-glob='*.exe.py'
    --cov=baygon --cov-report
    term --cov-report
    xml --cov-fail-under=80 -vvv
'''

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
  "UP",
  "C90",
  "N",
  "D",
  "ANN",
  "C4",
  "SIM",
  "PTH",
  "T20",
  "ERA",
  "ARG",
  "G",
  "TRY",
  "DTZ",
  "SLF",
  "PT",
  "RUF",
  "A",
]
ignore = [
  "E501",
  "F403",
  "F401",
  "D107",
  "D202",
  "D203",
  "D212",
  "D214",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D200",
  "D205",
  "D301",
  "D415",
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN201",
  "ANN202",
  "ANN204",
  "ANN205",
  "ANN206",
  "ARG002",
  "B008",
  "S101",
  "TRY003",
  "ANN401",
  "PT009",
  "PT027",
  "C901",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["baygon"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"baygon/__main__.py" = ["B008"]
"**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D", "T20", "S101", "ANN", "ARG002", "SLF001", "PT018", "ARG001", "TRY003"]
"tests/full/main.exe.py" = ["N999"]
