[metadata]
name = Baygon
author = Yves Chevallier
author_email = yves.chevallier@heig-vd.ch
license = MIT
description = Functional tests for teaching activities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = testing, functional-testing
url = https://github.com/heig-tin-info/baygon
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Education
    Topic :: Education :: Testing
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
project_urls=
    Documentation = https://heig-tin-info.github.io/baygon/
    Source = https://github.com/heig-tin-info/baygon
    Tracker = https://github.com/heig-tin-info/baygon/issues

[options]
packages = baygon
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
    voluptuous>=0.12.0
    click>=8.0.0
    PyYAML>=6.0
setup_requires =
    setuptools
    setuptools_scm

[options.extras_require]
test =
    flake8
    tox

[options.entry_points]
console_scripts =
    baygon=baygon.__main__:cli

[bdist_wheel]
universal = 1

[build-system]
requires =
    setuptools
    setuptools_scm
    wheel

[flake8]
exclude = .git,__pycache__,dist
max-complexity = 10
max-line-length = 100

[isort]
default_section=THIRDPARTY
known_first_party=baygon
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
